--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-python-multipart==0.0.6
-pydantic-settings==2.1.0
+fastapi==0.110.0
+uvicorn==0.28.0
+python-multipart==0.0.9
+pydantic-settings==2.2.1
 sentence-transformers==2.3.1
 chromadb==0.4.22
 pypdf==4.0.1
 python-dotenv==1.0.1
-httpx==0.26.0
+httpx==0.27.0
 numpy<2.0.0
+requests==2.31.0
+streamlit==1.32.0  # Updated from 1.25.0 to 1.32.0
