Pushing Dockerization Functionality

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,4 @@ python-dotenv==1.0.1
 httpx==0.27.0
 numpy<2.0.0
 requests==2.31.0
-streamlit==1.32.0  # Updated from 1.25.0 to 1.32.0
+streamlit==1.32.0  
